Updated .gitignore file to ignore A* examples

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+Unity Project/Assets/AstarPathfindingProject/ExampleScenes/
+Unity Project/Assets/AstarPathfindingProject/ExampleScenes.meta
