Added UnityVS package

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ Unity Project/Assets/AstarPathfindingProject/ExampleScenes/
 Unity Project/Assets/AstarPathfindingProject/ExampleScenes.meta
 Unity Project/Assets/AstarPathfindingProject/
 Unity Project/Assets/X-UniTMX/
+Unity Project/Assets/UnityVS/
+Unity Project/Assets/UnityVS.meta
