Updated gitignore for new packages

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ Unity Project/Assets/AstarPathfindingProject/
 Unity Project/Assets/X-UniTMX/
 Unity Project/Assets/UnityVS/
 Unity Project/Assets/UnityVS.meta
+Unity Project/Assets/InstantGui/
+Unity Project/Assets/GameBarCreationSystem/
+Unity Project/Assets/GameBarCreationSystem.meta
+Unity Project/Assets/InstantGui.meta
