Updated gitignore for inventory package

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ Unity Project/Assets/InstantGui/
 Unity Project/Assets/GameBarCreationSystem/
 Unity Project/Assets/GameBarCreationSystem.meta
 Unity Project/Assets/InstantGui.meta
+Unity Project/Assets/Inventory/
+Unity Project/Assets/Inventory.meta
