--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ Unity Project/Assets/GameBarCreationSystem.meta
 Unity Project/Assets/InstantGui.meta
 Unity Project/Assets/Inventory/
 Unity Project/Assets/Inventory.meta
+Unity Project/Assets/NGUI/
+Unity Project/Assets/NGUI.meta
