New main menu, updating of overlay into NGUI

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ Unity Project/Assets/Inventory/
 Unity Project/Assets/Inventory.meta
 Unity Project/Assets/NGUI/
 Unity Project/Assets/NGUI.meta
+Unity Project/Assets/Plugins/whydoidoit.com/
+Unity Project/Assets/UnitySerializer/
+Unity Project/Assets/Plugins/Editor/whydoidoit.com/
+Unity Project/Assets/Plugins/Editor/whydoidoit.com.meta
+Unity Project/Assets/Plugins/whydoidoit.com.meta
