More updates to map and interface. Most interface systems are in place now, but need to be fleshed out according to needs. Added Unity Remote

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ Unity Project/Assets/UnitySerializer/
 Unity Project/Assets/Plugins/Editor/whydoidoit.com/
 Unity Project/Assets/Plugins/Editor/whydoidoit.com.meta
 Unity Project/Assets/Plugins/whydoidoit.com.meta
+Unity Project/Assets/gfx/
