--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ Unity Project/Assets/Plugins/Editor/whydoidoit.com/
 Unity Project/Assets/Plugins/Editor/whydoidoit.com.meta
 Unity Project/Assets/Plugins/whydoidoit.com.meta
 Unity Project/Assets/gfx/
+Unity Project/Docs/
+Unity Project/Assets/Editor/Doxygen/
